# livraria22

./: db.sqlite3  livraria.json  livraria_bkp.json  pyproject.toml  requirements.txt
config/: settings.py  urls.py
livraria/: admin.py  models.py  serializers.py  views.py
livraria/migrations/: 0001_initial.py  0002_alter_usuario_cpf.py  0002_livro_autor.py  0003_livro_capa.py  0003_remove_livro_autor.py  0004_livro_autor.py  0005_remove_livro_autor_livro_autores.py  0006_alter_autor_email_usuario.py
livraria/models/: __init__.py  autor.py  editora.py  livro.py  usuario.py
livraria/serializers/: __init__.py  livro.py  usuario.py
livraria/views/: __init__.py  autor.py  categoria.py  editora.py  livro.py  usuario.py
