[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Matheus Vidal Zenere", email = "matheus.vidal.zenere@gmail.com"},
]
dependencies = [
    "django>=4.1.7",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=3.14.0",
    "djangorestframework-simplejwt>=5.2.2",
    "setuptools>=67.7.2",
    "python-magic>=0.4.27",
    "Pillow>=9.5.0",
    "drf-spectacular>=0.26.2",
]
requires-python = ">=3.10"
license = {text = "MIT"}
